# marvin

./: Cargo.toml  README.md  build.rs  sample.env  sqlx-data.json
.github/workflows/: ci.yml
entities/: mod.rs
migrations/: 20210414033824_initial.sql  20210831021859_notes.sql
src/: main.rs
src/entities/: mod.rs
src/handlers/: admin.rs  banning.rs  filters.rs  misc.rs  mod.rs  muting.rs  reminder.rs
src/migrations/: U1__initial.rs  chats.rs  mod.rs  users.rs
src/repo/: chats.rs  filters.rs  mod.rs  users.rs
src/utils/: mod.rs  perms.rs
