[package]
name = "marvin"
version = "0.1.0"
authors = ["SphericalKat <amolele@gmail.com>"]
edition = "2018"
description = "A group management bot for Telegram"
repository = "https://github.com/SphericalKat/marvin"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.4", features = ["macros", "auto-send"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
anyhow = "1.0.40"
