[package]
name = "marvin"
version = "0.1.0"
authors = ["SphericalKat <amolele@gmail.com>"]
edition = "2018"
description = "A group management bot for Telegram"
repository = "https://github.com/SphericalKat/marvin"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.7.0", features = ["macros", "auto-send", "rustls", "dispatching2", "cache-me"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros", "rt"] }
dotenv = "0.15.0"
anyhow = "1.0.40"
sqlx = { version = "0.5.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "offline"] }
lazy_static = "1.4.0"
chrono = "0.4.19"

[build-dependencies]
cargo-emit = "0.1.1"

[profile.release]
opt-level = 3
lto = true
